--- a/assets/css/messages.css
+++ b/assets/css/messages.css
@@ -121,6 +121,7 @@ body {
 }
 
 .usermessagebox-label {
+    top: 710px;
     display: flex;
     align-items: center;
     box-sizing: border-box;
